--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Hi, I am <strong> Dominik Martin</strong>
             </h1>
             <p class="section_subtitle section_subtitle_intro">Software Developer</p>
-            <img src="img/test.png" alt="a picture of Dominik Martin">
+            <img src="img/test.png" alt="a picture of Dominik Martin" class="intro_img">
         </section>
 
         <!-- My work-->
