--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
     </head>
     <body>
         <header>
-            <div class="logo">
-                <img 
-                src="img/test.png" alt=""> 
+            <div class = "top_bar">
+                <p><strong>Dominik Martin</strong> </p>
+
             </div>
-            <button class="nav_toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
-            </button>
             <nav class="nav">
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
@@ -42,26 +39,19 @@
                 Hi, I am <strong> Dominik Martin</strong>
             </h1>
             <p class="section_subtitle section_subtitle_intro">Software Developer</p>
-            <img src="img/test.png" alt="a picture of Dominik Martin" class="intro_img">
+            <img src="img/external-content.duckduckgo.com.png" alt="a picture of Dominik Martin" class="intro_img">
         </section>
 
         <!-- My work-->
-        <section class="my_work" id="work">
-            <h2 class="section_title section_title_my_work">My work</h2>
-            <div class="work">
-                <h3>work1</h3>
+        <section class="about_me" id="">
+            <h2 class="section_title section_title_about_me">Thats me</h2>
+            <div class="about">
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
                     At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
                     no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
                     Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-                </p>
-            </div>
-            <div class="work">
-                <h3>work2</h3>
-                <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
                     At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
                     no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
@@ -69,29 +59,19 @@
                     Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
                 </p>
             </div>
-            <div class="work">
-                <h3>work3</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-                    At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
-                    no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-                    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </p>
-            </div>
-            <a href="#work" class="btn">My Work</a>
+            
         </section>
 
-        <!-- About me-->
-        <section class="about_me" id="about">
-            <h2 class="section_title section_title_about">Who am I?</h2>
-            <p class="section_subtitle section_subtitle_about">
-            </p>
-            <div class="about_me_body">
+        <!-- Skills -->
+        <section class="skills" id="skills">
+            <h2 class="section_title section_title_skills">Skills </h2>
+            <p class="section_subtitle section_subtitle_skills">
+</p>
+            <div class="skills_body">
                 <p></p>
                 <p></p>
             </div>
-            <img src="img/test.png" alt="image of me"> 
+
         </section>
 
     </body>
