top bar bearbeitet

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     <body>
         <header>
             <div class = "top_bar">
-                <p><strong>Dominik Martin</strong> </p>
-
+                <section class="dm"><strong>Dominik Martin</strong> </section>
+                <section class="menu_home"> <strong><a href="#home" >Home</a></strong> </section>
+                <section class="menu_about_me"> <strong><a href="#about" >About Me</a></strong> </section>
+                <section class="menu_skills"> <strong><a href="#skills" >skills</a></strong> </section>
             </div>
+
             <nav class="nav">
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
-                    <li class="nav_item"><a href="#work" class="nav_link">My Work</a></li>
-                    <li class="nav_item"><a href="#about" class="nav_link">about me</a></li>
+                    <li class="nav_item"><a href="#about" class="nav_link">My Work</a></li>
+                    <li class="nav_item"><a href="#skills" class="nav_link">about me</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">test</a></li>
                 </ul>
             </nav>
@@ -43,7 +46,7 @@
         </section>
 
         <!-- My work-->
-        <section class="about_me" id="">
+        <section class="about_me" id="about">
             <h2 class="section_title section_title_about_me">Thats me</h2>
             <div class="about">
                 <p>
