Topbar, menu kleiner gemacht

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="section_title section_title_intro">
                 Hi, I am <strong> Dominik Martin</strong>
             </h1>
-            <p class="section_subtitle section_subtitle_intro">Software Developer</p>
+            <p class="section_subtitle section_subtitle_intro">Software Development & IT Security</p>
             <img src="img/external-content.duckduckgo.com.png" alt="a picture of Dominik Martin" class="intro_img">
         </section>
 
