Topbar, menu buttons design angepasst

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <header>
             <div class = "top_bar">
                 <section class="dm"><strong>Dominik Martin</strong> </section>
-                <section class="menu_home"> <strong><a href="#home" >Home</a></strong> </section>
-                <section class="menu_about_me"> <strong><a href="#about" >About Me</a></strong> </section>
-                <section class="menu_skills"> <strong><a href="#skills" >skills</a></strong> </section> 
+                <section class="menu_home"> <strong><a class ="menu_home1",  href="#home" >Home</a></strong> </section>
+                <section class="menu_about_me"> <strong><a class="menu_about_me1",  href="#about" >About Me</a></strong> </section>
+                <section class="menu_skills"> <strong><a class="menu_skills1", href="#skills" >skills</a></strong> </section> 
             </div>
 
-            <nav class="nav">
+           <!-- <nav class="nav">
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#about" class="nav_link">My Work</a></li>
                     <li class="nav_item"><a href="#skills" class="nav_link">about me</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">test</a></li>
                 </ul>
-            </nav>
+            </nav> -->
 
         </header>
 
