--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-a">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
 
-        <title>Dominik Portfolio Website</title>
+        <title>Dominik Portfolio Website test</title>
         
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
